# lead_intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASSUMPTIONS.md  CLAUDE.md  COMPETITOR_ANALYSIS.md  Makefile  README.md  RISKS.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ADR/: ADR-004-payper-call-data-apis.md
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  PROJECT_SPEC.md  QUESTIONS.md  ROADMAP.md
docs/ADR/: ADR-002-service-before-platform.md  ADR-003-signal-phasing.md
lead_intelligence/: ASSUMPTIONS.md  COMPETITOR_ANALYSIS.md  PROJECT_SPEC.md  QUESTIONS.md  README.md  RISKS.md  ROADMAP.md
lead_intelligence/ADR/: ADR-000-template.md  ADR-001-india-market-leads.md  ADR-003-signal-phasing.md  ADR-004-payper-call-data-apis.md  ADR-005-company-level-first.md
libs/compliance/: pyproject.toml
libs/compliance/src/li_compliance/: __init__.py  allowed_sources.py  errors.py  guards.py  robots.py
libs/compliance/tests/: test_allowed_sources.py  test_guards.py  test_li_compliance_import.py  test_robots.py
libs/core/: pyproject.toml
libs/core/src/li_core/: __init__.py  config.py  errors.py  ids.py
libs/core/src/li_core/models/: __init__.py  candidate.py  company.py  evidence.py  score.py  signal.py
libs/core/tests/: test_ids.py  test_li_core_import.py
libs/db/: alembic.ini  pyproject.toml
libs/db/src/li_db/: __init__.py  session.py  testing.py
libs/db/src/li_db/migrations/: env.py
libs/db/src/li_db/migrations/versions/: 0001_initial_company_graph.py
libs/db/src/li_db/orm/: __init__.py  tables.py
libs/db/src/li_db/repositories/: __init__.py  companies.py  resolution.py
libs/db/tests/: conftest.py  db_test_utils.py  test_li_db_import.py  test_migrations.py  test_repositories.py  test_schema_policy.py
libs/llm/: pyproject.toml
libs/llm/src/li_llm/: __init__.py
libs/llm/tests/: test_li_llm_import.py
libs/queue/: pyproject.toml
libs/queue/src/li_queue/: __init__.py  interface.py  procrastinate_driver.py
libs/queue/tests/: test_interface.py  test_li_queue_import.py
libs/storage/: pyproject.toml
libs/storage/src/li_storage/: __init__.py  store.py
libs/storage/tests/: test_store.py
libs/telemetry/: pyproject.toml
libs/telemetry/src/li_telemetry/: __init__.py  logging.py
libs/telemetry/tests/: test_li_telemetry_import.py  test_logging.py
services/agents/: pyproject.toml
services/agents/src/li_agents/: __init__.py
services/agents/tests/: test_li_agents_import.py
services/api/: pyproject.toml
services/api/src/li_api/: __init__.py
services/api/tests/: test_li_api_import.py
services/delivery/: pyproject.toml
services/delivery/src/li_delivery/: __init__.py
services/delivery/tests/: test_li_delivery_import.py
services/ingestion/: pyproject.toml
services/ingestion/src/li_ingestion/: __init__.py  artifacts.py  fetcher.py  main.py  normalize.py  pipeline.py  snapshots.py
services/ingestion/src/li_ingestion/adapters/: __init__.py  base.py  careers_pages.py  job_boards.py  news_funding.py  registry_gst.py  registry_mca.py  site_tech.py
services/ingestion/tests/: conftest.py  test_adapters.py  test_fetcher.py  test_li_ingestion_import.py  test_normalize.py  test_pipeline.py
services/resolver/: pyproject.toml
services/resolver/src/li_resolver/: __init__.py  anchor.py  fallback.py  main.py  outcomes.py  resolve.py
services/resolver/tests/: conftest.py  test_identifier_fixtures.py  test_li_resolver_import.py  test_resolve.py
services/scheduler/: pyproject.toml
services/scheduler/src/li_scheduler/: __init__.py  plans.py
services/scheduler/tests/: test_li_scheduler_import.py  test_plans.py
