[project]
name = "lead-intelligence"
version = "0.1.0"
description = "AI Lead Intelligence Platform — warm, evidence-cited Indian-company accounts"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8",
    "pre-commit>=3.7",
    "moto[s3]>=5.0",
    "boto3-stubs[s3]>=1.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
# conftest.py is special-cased by pytest (imported per-directory), so several may
# share the module name "conftest"; mypy has no per-dir concept and would flag the
# collision. Test files never import conftest (fixtures are injected), so excluding
# the conftests keeps every other test module type-checked without the false clash.
exclude = ['(^|/)conftest\.py$']
mypy_path = [
    "libs/core/src", "libs/db/src", "libs/queue/src", "libs/llm/src",
    "libs/compliance/src", "libs/telemetry/src", "libs/storage/src",
    "services/scheduler/src", "services/ingestion/src", "services/resolver/src",
    "services/agents/src", "services/delivery/src", "services/api/src",
]

[tool.pytest.ini_options]
testpaths = ["libs", "services"]
norecursedirs = [".venv", "node_modules", ".git"]
addopts = "-q"
