[project]
name = "li-compliance"
version = "0.1.0"
description = "Allowed-sources registry, robots policy, person-data guards"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_compliance"]
