[project]
name = "li-db"
version = "0.1.0"
description = "SQLAlchemy ORM, Alembic migrations, repositories over the company graph"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_db"]
