[project]
name = "li-llm"
version = "0.1.0"
description = "Claude client, model tiering, prompt caching, budget caps, cost ledger"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_llm"]
