[project]
name = "li-queue"
version = "0.1.0"
description = "Driver-agnostic job queue (Procrastinate now, SQS-capable later)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_queue"]
