[project]
name = "li-storage"
version = "0.1.0"
description = "Content-addressed object store for immutable evidence snapshots (MinIO/S3)"
requires-python = ">=3.12"
dependencies = [
    "li-core",
    "boto3>=1.34",
]

[tool.uv.sources]
li-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_storage"]
