[project]
name = "li-telemetry"
version = "0.1.0"
description = "Structured logging, tracing, metrics"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_telemetry"]
