[project]
name = "li-agents"
version = "0.1.0"
description = "Three-pass pipeline: triggers, deep-fit research, scoring"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_agents"]
