[project]
name = "li-ingestion"
version = "0.1.0"
description = "Source adapters, evidence snapshots, normalization"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_ingestion"]
