[project]
name = "li-ingestion"
version = "0.1.0"
description = "Source adapters, evidence snapshots, normalization"
requires-python = ">=3.12"
dependencies = [
    "li-core",
    "li-compliance",
    "li-storage",
    "li-telemetry",
    "httpx>=0.27",
]

[tool.uv.sources]
li-core = { workspace = true }
li-compliance = { workspace = true }
li-storage = { workspace = true }
li-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_ingestion"]
