[project]
name = "li-resolver"
version = "0.1.0"
description = "Entity resolution onto CIN/GSTIN anchors"
requires-python = ">=3.12"
dependencies = [
    "li-core",
    "li-db",
    "li-telemetry",
]

[tool.uv.sources]
li-core = { workspace = true }
li-db = { workspace = true }
li-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_resolver"]
