[project]
name = "li-scheduler"
version = "0.1.0"
description = "Refresh planning: which companies/sources, per-customer cadence"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/li_scheduler"]
